titre et header

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -96,8 +96,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </span>
                 </div>
                 <!-- /.headlines-wrapper -->
-                <h3 class="first-headline">The Coolest Modern HTML Theme is Here!</h3>
-                <h3 class="second-headline">Welcome to <span>Particle</span> by SkillTech</h3>
+                <h3 class="first-headline">Des experts en conception digitale développent des solutions simple</h3>
+                <h3 class="second-headline">Et efficace pour <span> votre évolution professionnelle ! </span></h3>
 
             </div>
             <!-- /.col-lg-12 -->
@@ -117,8 +117,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12">
-                <h3 class="wow fadeInLeft animated"><span>Coolest</span> HTML Theme yet?</h3>
-                <h4 class="wow fadeInLeft animated">Start with particle today, why not!</h4>
+                <h4 class="second-headline fadeInRight animated">Nous développons, vous aidons à déployer <span>vos idées et votre savoir faire</span> sur l’ensemble <span>des terminaux connectés</span></h4><br></br>
+                <h4 class="wow fadeInLeft animated">Nous sommes les experts de <span>la digitalisation des loisirs et culturel</span> pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients</h4><br></br>
+                <h4 class="wow fadeInLeft animated">Nous mettons en œuvre <span>des solutions simple et efficaces</span> à travers des plateformes multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span></h4>
                 <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Get it now</button>
             </div>
             <!-- /.col-md-12 -->
@@ -686,7 +687,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["This is The Particle Theme", "Click on the live effect!", "Coolest Modern HTML Theme"];
+    var sentences = ["Boostez votre chiffre d'affaire !", "Développez votre entreprise"];
 </script>
 <script src="assets/js/custom/particle-theme-dark.js"></script>
 </body>
