--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -265,13 +265,17 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated"><span>About</span> Particle Company</h2>
-                    <p class="wow fadeIn animated">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-                        odio. Praesent libero. Sed
-                        cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis
-                        ipsum. Praesent mauris.
-                    </p>
+                    <h2 class="wow fadeIn animated"><span>Pouquoi </span> Vous ?</h2>
+                    <h3 class="wow fadeIn animated">
+                        <span>Fidéliser un client ou un visiteur et en apporter de nouveaux !</span>
+                    </h3>
+                      <p class="wow fadeIn animated"> C'est un enjeu majeur pour le développement des
+                        espaces professionnel de loisirs et culturels. Le notre d'enjeu est de renforcer
+                        l'expérience utilisateur de vos canaux de communication en optimisant ses intérations.
+                      </p>
+                      <p class="wow fadeIn animated">Vous obtiendrez des visiteurs en plus ainsi qu'un outils 
+                        performant personalisé pour transformer ces nouveaux visiteurs en nouveaux client.
+                      </p>
                     <ul class="about-icons list-inline">
                         <li class="wow fadeIn animated">
                             <div class="icon"><i class="material-icons">beenhere</i></div>
