icon Pourquoi Vous

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -273,21 +273,21 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         espaces professionnel de loisirs et culturels. Le notre d'enjeu est de renforcer
                         l'expérience utilisateur de vos canaux de communication en optimisant ses intérations.
                       </p>
-                      <p class="wow fadeIn animated">Vous obtiendrez des visiteurs en plus ainsi qu'un outils 
+                      <p class="wow fadeIn animated">Vous obtiendrez des visiteurs en plus ainsi qu'un outils
                         performant personalisé pour transformer ces nouveaux visiteurs en nouveaux client.
                       </p>
                     <ul class="about-icons list-inline">
                         <li class="wow fadeIn animated">
                             <div class="icon"><i class="material-icons">beenhere</i></div>
-                            <div class="text">Super fast & reliable</div>
+                            <div class="text">Rapide & Efficace</div>
                         </li>
                         <li class="wow fadeIn animated">
-                            <div class="icon"><i class="material-icons">comment</i></div>
-                            <div class="text">24 Hour Support</div>
+                            <div class="icon"><i class="material-icons">mood</i></div>
+                            <div class="text">Adapté à votre univers</div>
                         </li>
                         <li class="wow fadeIn animated">
-                            <div class="icon"><i class="material-icons">insert_chart</i></div>
-                            <div class="text">We Get the Results</div>
+                            <div class="icon"><i class="material-icons">all_inclusive</i></div>
+                            <div class="text">Moderne & Autonome</div>
                         </li>
                     </ul>
                     <!-- /.about-icons -->
