--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -327,17 +327,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 quote-headline">
-                <h4 class="wow fadeIn animated">We are here to <span>make things Better</span></h4>
+                <h4 class="wow fadeIn animated">Nous sommes avec vous <span>pour rendre les choses mieux </span></h4>
             </div>
             <!-- /.quote-headline -->
 
             <div class="col-md-12 quote-bottom">
                 <div class="container">
                     <h3 class="wow fadeIn animated">
-                        "Patience, persistence and perspiration make an unbeatable combination for
-                        <span>success</span>."
+                        "Lorsque deux forces sont jointes,
+                        <span>leur efficacité est double.</span>."
                     </h3>
-                    <p class="wow fadeIn animated">NAPOLEON HILL<span> - Author</span></p>
+                    <p class="wow fadeIn animated">Isaac NEWTON<span> - Physicien </span></p><br></br>
+                    <h3 class="wow fadeIn animated">
+                        "La logique vous conduira d’un point A à un point B.
+                        <span> L'imagination </span> et <span> l'audace </span>vous conduiront où vous le désirez"
+                    </h3>
+                    <p class="wow fadeIn animated">Albert Einstein<span> - Physicien </span></p>
                 </div>
             </div>
             <!-- /.quote-bottom -->
