--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -362,11 +362,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated">What We do, We do <span>Best!</span></h2>
+                <h2 class="wow fadeIn animated"> Ce que nous faisons, nous le faisons <span> mieux !</span></h2>
                 <p class="wow fadeIn animated">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-                    Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
-                    Duis sagittis ipsum.Praesent mauris.
+                  Nous apportons notre expertise à votre entrprise pour booster votre chiffre d'affaire
+                  grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
                 </p>
             </div>
             <!-- /.service-headline -->
@@ -375,29 +374,29 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="left">
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <a href="service-item.html">Graphic Design</a>
-                            <p>Lorem ipsum dolor sit amet, consecte adipiscing elit. Integer nec odio.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">create</i>
-                        </div>
-                    </div>
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
                             <a href="service-item.html">Web Design</a>
-                            <p>Lorem ipsum dolor sit amet, consecte adipiscing elit. Integer nec odio.</p>
+                            <p>Une visibilité et une utilisation agréable et simple.</p>
                         </div>
                         <div class="icons">
-                            <i class="material-icons">screen_share</i>
+                            <i class="material-icons">touch_app</i>
                         </div>
-                    </div>
+                    </div><br></br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <a href="service-item.html">Social Media</a>
-                            <p>Lorem ipsum dolor sit amet, consecte adipiscing elit. Integer nec odio.</p>
+                            <a href="service-item.html">Responsive Design</a>
+                            <p>Compatible et s'adapte à tout type de support.</p>
                         </div>
                         <div class="icons">
-                            <i class="material-icons">devices</i>
+                            <i class="material-icons">important_devices</i>
+                        </div>
+                    </div><br></br>
+                    <div class="service wow fadeIn animated">
+                        <div class="text">
+                            <a href="service-item.html">Reférencement Optimisé</a>
+                            <p>Référencement organique ou sponsorisé pout une notoriété améliorée.</p>
+                        </div>
+                        <div class="icons">
+                            <i class="material-icons">visibility</i>
                         </div>
                     </div>
                 </div>
@@ -407,29 +406,31 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="right">
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
-                            <i class="material-icons">photo_camera</i>
+                            <i class="material-icons">mood</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Photography</a>
-                            <p>Lorem ipsum dolor sit amet, consecte adipiscing elit. Integer nec odio.</p>
-                        </div>
+                            <a href="service-item.html">Expérience Utilisateur</a>
+                            <p>Des fonctionnalités concues pour vos clients et votre entreprise.
+                               (Billeterie, Cartographie, File d'attente numérique)</p>
+                        </div><br></br>
                     </div>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
-                            <i class="material-icons">mic</i>
+                            <i class="material-icons">trending_up</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Marketing</a>
-                            <p>Lorem ipsum dolor sit amet, consecte adipiscing elit. Integer nec odio.</p>
+                            <a href="service-item.html">Business</a>
+                            <p>Des outils de statistiques et de prévisions de
+                              votre chiffres d'affaire, relences clients</p>
                         </div>
-                    </div>
+                    </div><br></br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
-                            <i class="material-icons">play_circle_filled</i>
+                            <i class="material-icons">autorenew</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Video Production</a>
-                            <p>Lorem ipsum dolor sit amet, consecte adipiscing elit. Integer nec odio.</p>
+                            <a href="service-item.html">Autonome</a>
+                            <p>News letters automatisées, envoie ciblé</p>
                         </div>
                     </div>
                 </div>
