banniere contactez nous

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -454,12 +454,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12">
-                <h3 class="wow fadeIn animated">Like what You see? <span>Get Particle</span> Now!</h3>
-                <p class="wow fadeIn animated">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-                    odio. Praesent libero. Sed
-                    cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum.
-                    Praesent mauris.</p>
-                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Get it Now</button>
+                <h3 class="wow fadeIn animated">Envie de faire évoluer votre entreprise ?<span> Contactez-nous</span> dès maintenant !</h3>
+                <p class="wow fadeIn animated">Nos experts en stratégie digitale vous accompagnent afin de créer
+                  des intérfaces qui vous ressemble et booste votre visibilité.</p>
+                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Contactez-nous !</button>
             </div>
             <!-- /.col-md-12 -->
         </div>
