Pourquoi nous + progress bar

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -455,8 +455,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <h3 class="wow fadeIn animated">Envie de faire évoluer votre entreprise ?<span> Contactez-nous</span> dès maintenant !</h3>
-                <p class="wow fadeIn animated">Nos experts en stratégie digitale vous accompagnent afin de créer
-                  des intérfaces qui vous ressemble et booste votre visibilité.</p>
+                <p class="wow fadeIn animated">Notre équipe répondra à vos questions et vous proposera
+                  la solution la plus adaptée pour votre entreprise.</p>
                 <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Contactez-nous !</button>
             </div>
             <!-- /.col-md-12 -->
@@ -477,10 +477,18 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <div class="skills-headline">
-                    <h4 class="wow fadeIn animated">Let <span>Our Skills</span> speak for Us</h4>
+                    <h4 class="wow fadeIn animated">Pourquoi<span> Nous ? </span></h4>
                     <p class="wow fadeIn animated">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer necodio.
-                        Praesent libero. Sed cursus ante dapibus diam.
+                        Nos ingénieurs d'expertise en intelligence numérique
+                        vous aident imaginer des solutions digitales adaptées à votre univers.
+                    </p>
+                    <p class="wow fadeIn animated">
+                        Nos développeurs agréés et créatifs sont nos ingénieurs de tous les possibles.
+                        Ils réalisent vos interfaces modernes et autonomes.
+                    </p>
+                    <p class="wow fadeIn animated">
+                        Nos experts en stratégie digitale vous accompagnent afin de créer
+                        des intérfaces qui vous ressemble et booste votre visibilité.
                     </p>
                 </div>
             </div>
@@ -489,39 +497,39 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 progress-bar-wrapper">
                 <div class="progress-bars">
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Adobe creative cloud</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Strategie digitale</div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated first-bar"></div>
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-1">
-                            <span class="counter">75</span><span>%</span>
+                            <span class="counter">85</span><span>%</span>
                         </div>
                     </div>
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">WORDPRESS</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Développement sur mesure</div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated second-bar"></div>
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-1">
-                            <span class="counter">80</span><span>%</span>
+                            <span class="counter">90</span><span>%</span>
                         </div>
                     </div>
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Laravel</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Certifications référencement </div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated third-bar"></div>
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-1">
-                            <span class="counter">50</span><span>%</span>
+                            <span class="counter">100</span><span>%</span>
                         </div>
                     </div>
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">GRAPHIC DESIGN</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">WEB DESIGN</div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated fourth-bar"></div>
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-1">
-                            <span class="counter">70</span><span>%</span>
+                            <span class="counter">80</span><span>%</span>
                         </div>
                     </div>
                     <div class="bar-wrapper">
@@ -530,7 +538,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="progressBar gradient wow animated fifth-bar"></div>
                         </div>
                         <div class="col-md-1 col-sm-1 col-xs-1">
-                            <span class="counter">59</span><span>%</span>
+                            <span class="counter">85</span><span>%</span>
                         </div>
                     </div>
                 </div>
