--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -563,23 +563,20 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12">
 
                 <div class="contact-headline">
-                    <h3 class="wow fadeIn animated">Let's <span>Connect</span></h3>
-                    <p class="wow fadeIn animated">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-                        odio. Praesent libero. Sed
-                        cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis
-                        ipsum. Praesent mauris.</p>
+                    <h3 class="wow fadeIn animated"><span>Contactez-nous</span></h3>
+
                 </div>
                 <!-- /.contact-headline -->
 
                 <div class="contact-content">
                     <div class="contact-info">
-                        <p class="contact-header">Our office <span>info</span></p>
+                        <p class="contact-header">Nos locaux : <span> Sudri'cub</span></p>
                         <div class="info-line">
                             <div class="info-icon wow fadeIn animated">
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>particle@museshop.net</p>
+                                <p>contact@morman.fr</p>
                             </div>
                         </div>
                         <div class="info-line">
@@ -587,7 +584,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>+381 (0) 21 555 4597</p>
+                                <p>(+33) 6.34.68.32.35 / (+33) 6.78.12.23.91</p>
                             </div>
                         </div>
 
@@ -596,7 +593,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <i class="fa fa-address-card-o" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>555 Downing st. Suite 1000</p>
+                                <p>38 rue Molière</p>
                             </div>
                         </div>
 
@@ -605,7 +602,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                             </div>
                             <div class="info-text wow fadeIn animated">
-                                <p>New York, NY 10010</p>
+                                <p>94200 Ivry sur Seine</p>
                             </div>
                         </div>
 
