--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -604,10 +604,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="info-text wow fadeIn animated">
                                 <p>94200 Ivry sur Seine</p>
                             </div>
-                        </div>
+                        </div><br></br>
 
                         <div class="bottom-info">
-                            <h4 class="wow fadeIn animated"><span>Connect</span> with us</h4>
+                            <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
@@ -617,51 +617,45 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                                        <i class="fa fa-youtube" aria-hidden="true"></i>
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus" aria-hidden="true"></i>
-                                    </a>
-                                </li>
+
                                 <li>
                                     <a href="#">
                                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                                     </a>
                                 </li>
                             </ul>
-
-                            <p class="wow fadeIn animated">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                     </div>
                     <!-- /.contact-info -->
 
                     <div class="contact-form">
-                        <h4 class="wow fadeIn animated">Send us a <span>Message</span></h4>
+                        <h4 class="wow fadeIn animated">Envoyez nous <span>un message...</span></h4>
 
                         <form method="post">
                             <div class="form-group wow fadeIn animated">
-                                <label for="name">Name: </label>
+                                <label for="name">Votre Nom - Prénom - Société : </label>
                                 <input type="text" id="name" name="name" class="form-control">
                             </div>
                             <!-- /.form-group -->
 
                             <div class="form-group wow fadeIn animated">
-                                <label for="email">Email: </label>
+                                <label for="email">Votre Email: </label>
                                 <input type="email" id="email" name="email" class="form-control">
                             </div>
                             <!-- /.form-group -->
 
 
                             <div class="form-group wow fadeIn animated">
-                                <label for="message">Message: </label>
+                                <label for="message">Votre Message: </label>
                                 <textarea id="message" name="message" class="form-control" rows="4"></textarea>
                             </div>
                             <!-- /.form-group -->
 
 
-                            <button class="btn btn-default wow fadeIn animated" type="submit">Submit</button>
+                            <button class="btn btn-default wow fadeIn animated" type="submit">Envoyez</button>
 
                         </form>
                     </div>
