--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -97,7 +97,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <!-- /.headlines-wrapper -->
                 <h3 class="first-headline">Des experts en conception digitale développent des solutions simple</h3>
-                <h3 class="second-headline">Et efficace pour <span> votre évolution professionnelle ! </span></h3>
+                <h3 class="second-headline">et efficace pour <span> votre évolution professionnelle ! </span></h3>
 
             </div>
             <!-- /.col-lg-12 -->
