--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -642,14 +642,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <!-- /.form-group -->
 
                             <div class="form-group wow fadeIn animated">
-                                <label for="email">Votre Email: </label>
+                                <label for="email">Votre Email : </label>
                                 <input type="email" id="email" name="email" class="form-control">
                             </div>
                             <!-- /.form-group -->
 
 
                             <div class="form-group wow fadeIn animated">
-                                <label for="message">Votre Message: </label>
+                                <label for="message">Votre Message : </label>
                                 <textarea id="message" name="message" class="form-control" rows="4"></textarea>
                             </div>
                             <!-- /.form-group -->
@@ -674,7 +674,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Footer
 ================================================== -->
 <footer>
-    <p>Copyright © 2017 -<a href="http://www.skilltechwebdesign.com"> SkillTech</a></p>
+    <p><a href="$">MORMAN DESIGN </a>© 2017<br></br><a href="$"> Confidentialité</a> |
+      <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a></p>
 </footer>
 
 <!-- Scripts
