--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -117,9 +117,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12">
-                <h4 class="second-headline fadeInRight animated">Nous développons, vous aidons à déployer <span>vos idées et votre savoir faire</span> sur l’ensemble <span>des terminaux connectés</span></h4><br></br>
-                <h4 class="wow fadeInLeft animated">Nous sommes les experts de <span>la digitalisation des loisirs et culturel</span> pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients</h4><br></br>
-                <h4 class="wow fadeInLeft animated">Nous mettons en œuvre <span>des solutions simple et efficaces</span> à travers des plateformes multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span></h4>
+                <h4 class="wow fadeInLeft animated">Nous développons, vous aidons à déployer <span>vos
+                idées et votre savoir faire</span> sur l’ensemble <span>des terminaux connectés</span><br></br>
+                Nous sommes les experts de <span>la digitalisation des loisirs et culturel</span>
+                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients<br></br>
+                Nous mettons en œuvre <span>des solutions simple et efficaces</span> à travers des plateformes
+                multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
+                </h4>
                 <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Get it now</button>
             </div>
             <!-- /.col-md-12 -->
