les fonctionnalités + css

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -143,17 +143,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">See Our Work</h2>
+                <h2 class="wow fadeInLeft animated">Nos fonctionnalités <span>révolutionnaire pour vous !</span></h2>
             </div>
             <!-- /.see-work -->
             <div class="col-md-12 new-style">
-                <p class="wow fadeInLeft animated">The new Style for 2017 is here. Like it? <a href="#">BUY THEME
-                    NOW!</a></p>
+                <p class="wow fadeInLeft animated">Testez les dans votre enseigne, <a href="#">nous les concevons sur mesure !</a></p>
             </div>
             <!-- /.new-style -->
 
             <div class="col-md-12 portfolio-images">
-                <div class="col-md-3 col-sm-6 col-xs-6">
+                <div class="col-md-6 col-sm-6 col-xs-6">
 
                     <div class="portfolio-img first">
                         <img class="img-responsive" src="assets/images/portfolio-thumbnail-01-dark.jpg"
@@ -167,8 +166,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="portfolio-item.html">Thumb Hover Superb</a></h3>
-                                    <p>Pure CSS Instant Hover</p>
+                                    <h3><a href="portfolio-item.html">La cartographie intéractive</a></h3>
+                                    <p>Plongez vos visiteurs dans votre univers</p>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +177,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <!-- /.col-md-3 -->
 
-                <div class="col-md-3 col-sm-6 col-xs-6">
+                <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="portfolio-img second">
                         <img class="img-responsive" src="assets/images/portfolio-thumbnail-02-dark.jpg"
                              alt="porftofilio thumbnail">
@@ -191,8 +190,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="portfolio-item.html">Thumb Hover Superb</a></h3>
-                                    <p>Pure CSS Instant Hover</p>
+                                    <h3><a href="portfolio-item.html">La file d'attente numérique</a></h3>
+                                    <p>La révolution de l'attente est en marche</p>
                                 </div>
                             </div>
                         </div>
@@ -202,52 +201,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <!-- /.col-md-3 -->
 
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img third">
-                        <img class="img-responsive" src="assets/images/portfolio-thumbnail-03-dark.jpg"
-                             alt="porftofilio thumbnail">
-                        <div class="sweep-left"></div>
-                        <div class="sweep-from-center">
-                            <div class="sweep-layer">
-                                <div class="sweep-content">
-                                    <div class="sweep-icon">
-                                        <a href="portfolio-item.html">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>
-                                        </a>
-                                    </div>
-                                    <h3><a href="portfolio-item.html">Thumb Hover Superb</a></h3>
-                                    <p>Pure CSS Instant Hover</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sweep-right"></div>
-                    </div>
-                    <!-- /.portfolio-img -->
-                </div>
+
                 <!-- /.col-md-3 -->
 
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img fourth">
-                        <img class="img-responsive" src="assets/images/portfolio-thumbnail-04-dark.jpg"
-                             alt="porftofilio thumbnail">
-                        <div class="sweep-left"></div>
-                        <div class="sweep-from-center">
-                            <div class="sweep-layer">
-                                <div class="sweep-content">
-                                    <div class="sweep-icon">
-                                        <a href="portfolio-item.html">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>
-                                        </a>
-                                    </div>
-                                    <h3><a href="portfolio-item.html">Thumb Hover Superb</a></h3>
-                                    <p>Pure CSS Instant Hover</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sweep-right"></div>
-                    </div>
-                    <!-- /.portfolio-img -->
-                </div>
+
                 <!-- /.col-md-3 -->
             </div>
             <!-- /.portfoli-images -->
