--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -118,13 +118,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12">
                 <h4 class="wow fadeInLeft animated">Nous développons, vous aidons à déployer <span>vos
-                idées et votre savoir faire</span> sur l’ensemble <span>des terminaux connectés</span><br></br>
+                idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span><br></br>
                 Nous sommes les experts de <span>la digitalisation des loisirs et culturel</span>
                 pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients<br></br>
-                Nous mettons en œuvre <span>des solutions simple et efficaces</span> à travers des plateformes
+                Nous mettons en œuvre <span>des solutions simples et efficaces</span> à travers des plateformes
                 multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                 </h4>
-                <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Get it now</button>
+                <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Dites nous vos besoin</button>
             </div>
             <!-- /.col-md-12 -->
         </div>
@@ -155,7 +155,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="col-md-6 col-sm-6 col-xs-6">
 
                     <div class="portfolio-img first">
-                        <img class="img-responsive" src="assets/images/portfolio-thumbnail-01-dark.jpg"
+                        <img class="img-responsive" src="assets/images/cartographie.jpg"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
@@ -179,7 +179,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="portfolio-img second">
-                        <img class="img-responsive" src="assets/images/portfolio-thumbnail-02-dark.jpg"
+                        <img class="img-responsive" src="assets/images/cartographie.jpg"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
