--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -152,7 +152,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <!-- /.new-style -->
 
             <div class="col-md-12 portfolio-images">
-                <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="col-md-6 ">
 
                     <div class="portfolio-img first">
                         <img class="img-responsive" src="assets/images/cartographie.jpg"
@@ -162,7 +162,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
                                     <div class="sweep-icon">
-                                        <a href="portfolio-item.html">
+                                        <a href="cartographie.html">
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
