--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -56,22 +56,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <nav id="st-main-nav">
         <ul>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#page-top">Home</a>
+                <a class="page-scroll hvr-underline-from-center" href="#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Our Work</a>
+                <a class="page-scroll hvr-underline-from-center" href="#our-work">Nos petits plus</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#about">About Us</a>
+                <a class="page-scroll hvr-underline-from-center" href="#about">Pourquoi vous </a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#services">Services</a>
+                <a class="page-scroll hvr-underline-from-center" href="#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#skills">Our Skills</a>
+                <a class="page-scroll hvr-underline-from-center" href="#skills">Pourquoi nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#contact">Contact Us</a>
+                <a class="page-scroll hvr-underline-from-center" href="#contact">Contactez-nous</a>
             </li>
         </ul>
     </nav>
@@ -166,7 +166,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="portfolio-item.html">La cartographie intéractive</a></h3>
+                                    <h3><a href="cartographie.html">La cartographie intéractive</a></h3>
                                     <p>Plongez vos visiteurs dans votre univers</p>
                                 </div>
                             </div>
@@ -186,11 +186,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
                                     <div class="sweep-icon">
-                                        <a href="portfolio-item.html">
+                                        <a href="file_dattente.html">
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="portfolio-item.html">La file d'attente numérique</a></h3>
+                                    <h3><a href="file_dattente.html">La file d'attente numérique</a></h3>
                                     <p>La révolution de l'attente est en marche</p>
                                 </div>
                             </div>
