--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -335,7 +335,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="left">
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <a href="service-item.html">Web Design</a>
+                            <p><span>Web Design</span></p>
                             <p>Une visibilité et une utilisation agréable et simple.</p>
                         </div>
                         <div class="icons">
