--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Particle Theme | Portfolio Item</title>
+    <title>Particle Theme | Service Item</title>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -25,7 +25,6 @@
     <link href="assets/css/custom/theme.css" rel="stylesheet">
     <link href="assets/css/custom/colors.css" rel="stylesheet">
 
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -34,7 +33,7 @@
     <![endif]-->
 
 </head>
-<body>
+<body id="page-top" data-spy="scroll" data-target="#st-nav">
 
 <!-- Navigation Menu
 ================================================== -->
@@ -69,9 +68,10 @@
     </nav>
 </div>
 
-<!-- Portfolio Item
+<!-- Service Item
 ================================================== -->
-<section class="portfolio-item">
+<section class="service-item">
+    <div class="service-item-layer"></div>
 
     <div class="container-fluid">
 
@@ -79,30 +79,24 @@
 
             <div class="col-lg-12">
 
-                <div class="portfolio-headline">
-                    <div id="particles-js"></div>
-
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12">
-
-                                <div class="typed-headline">
-                                    <span class="skilltechtypetext">
-                                        <span class="typed-cursor">|</span>
-                                    </span>
-
-                                </div>
-                                <!-- /.typed-headline -->
-
-                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">Jettez y un oeil...</a>
-                            </div>
-                        </div>
-                    </div>
-
-
+                <div class="typed-headline">
+                    <span class="skilltechtypetext">
+                        <span class="typed-cursor">|</span>
+                    </span>
                 </div>
+                <!-- /.typed-headline -->
+
+                <div class="service-headline-text">
 
 
+                    <div class="service-item-read-more">
+                        <a href="#service-details" class="arrow-down page-scroll">
+                            <i class="fa fa-angle-down bounce" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <!-- /.service-item-read-more -->
+                </div>
+                <!-- /.service-headline-text -->
             </div>
             <!-- /.col-lg-6 -->
         </div>
@@ -110,6 +104,7 @@
     </div>
     <!-- /.container-fluid -->
 </section>
+<!-- /.service-item -->
 
 <!-- Services Section
 ================================================== -->
@@ -201,7 +196,7 @@
 </section>
 <!-- /.service-section -->
 
-<section class="portfolio-item-details" id="portfolio-details">
+<section class="service-item-details" id="service-details">
 
     <div class="container">
 
@@ -209,159 +204,45 @@
 
             <div class="col-lg-12">
 
-                <div class="col-lg-8 col-md-12">
-
-                    <div class="portfolio-text">
-                        <h3>About the <span>project</span></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-                            Sed
-                            cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis
-                            sagittis
-                            ipsum. Praesent mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-                            odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh
-                            elementum
-                            imperdiet. Duis sagittis ipsum. Praesent mauris.
-                        </p>
-                    </div>
-                    <!-- /.service-text -->
-
-                    <div class="portfolio-useful-links">
-                        <h3>Useful <span>links</span></h3>
-                        <ul class="list-inline portfolio-icons">
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">laptop</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">description</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">done_all</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-behance" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <!-- /.list-inline -->
-                    </div>
-
-                    <div class="portfolio-download-links">
-                        <h3>Download <span>links</span></h3>
-                        <ul class="list-inline portfolio-icons">
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">laptop</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">description</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">done_all</i>
-                                </a>
-                            </li>
-                        </ul>
-                        <!-- /.list-inline -->
-                    </div>
-
-
+                <div class="service-text">
+                    <h3>Unbelievable  <span>Theme Design</span></h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed
+                        cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis
+                        ipsum. Praesent mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
+                        odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
+                        imperdiet. Duis sagittis ipsum. Praesent mauris.
+                    </p>
                 </div>
+                <!-- /.service-text -->
 
-                <div class="col-lg-4 col-md-12">
-                    <ul class="portfolio-info">
-                        <li>
-                            <p class="first">Project Name</p>
-                            <p class="second">Awesome project</p>
-                        </li>
-                        <li>
-                            <p class="first">Created By</p>
-                            <p class="second">John Smith</p>
-                        </li>
-                        <li>
-                            <p class="first">Client</p>
-                            <p class="second">Microsoft</p>
-                        </li>
-                        <li>
-                            <p class="first">Budget</p>
-                            <p class="second">$50,000.000</p>
-                        </li>
-                        <li>
-                            <p class="first">Completion Date</p>
-                            <p class="second">May 30th 2017</p>
-                        </li>
-                        <li>
-                            <p class="first">Project Type</p>
-                            <p class="second">Web Development</p>
-                        </li>
-                        <li>
-                            <p class="first">Project Length</p>
-                            <p class="second">3 months</p>
-                        </li>
-                        <li>
-                            <p class="first">Skills Used</p>
-                            <p class="second">JavaScript, PHP</p>
-                        </li>
-                        <li>
-                            <p class="first">Project Manager</p>
-                            <p class="second">Dejan Stankovic</p>
-                        </li>
-                    </ul>
-                    <!-- /.list-inline -->
+                <div class="service-form">
+                    <h3>Get this cool <span>Service</span></h3>
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name: </label>
+                            <input type="text" id="name" name="name" class="form-control">
+                        </div>
+                        <!-- /.form-group -->
+
+                        <div class="form-group">
+                            <label for="email">Email: </label>
+                            <input type="email" id="email" name="email" class="form-control">
+                        </div>
+                        <!-- /.form-group -->
+
+                        <div class="form-group">
+                            <label for="message">Message: </label>
+                            <textarea id="message" name="message" class="form-control" rows="3"></textarea>
+                        </div>
+                        <!-- /.form-group -->
+
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
                 </div>
-
-                <div class="col-lg-12 col-md-12">
-                    <div class="portfolio-form">
-                        <h3>Get <span>Involved</span></h3>
-                        <form>
-                            <div class="form-group">
-                                <label for="name">Name: </label>
-                                <input type="text" id="name" name="name" class="form-control">
-                            </div>
-                            <!-- /.form-group -->
-
-                            <div class="form-group">
-                                <label for="email">Email: </label>
-                                <input type="email" id="email" name="email" class="form-control">
-                            </div>
-                            <!-- /.form-group -->
-
-                            <div class="form-group">
-                                <label for="message">Message: </label>
-                                <textarea id="message" name="message" class="form-control" rows="3"></textarea>
-                            </div>
-                            <!-- /.form-group -->
-
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </form>
-                    </div>
-                    <!-- /.portfolio-form -->
-                </div>
-
+                <!-- /.service-form -->
             </div>
         </div>
-
     </div>
-
 </section>
 
 <!-- Footer
@@ -370,23 +251,19 @@
     <p>Copyright © 2017 -<a href="http://www.skilltechwebdesign.com"> SkillTech</a></p>
 </footer>
 
-<!-- Scripts
+<!-- Scritps
 ================================================== -->
 <!-- jQuery -->
 <script src="assets/js/libraries/jquery-2.2.4.js"></script>
-
 <!-- Bootstrap Core JavaScript -->
 <script src="assets/js/libraries/bootstrap.js"></script>
-
 <!-- JavaScript Libraries -->
 <script src="assets/js/libraries/typed.js"></script>
 <script src="assets/js/libraries/wow.js"></script>
-<script src="assets/js/libraries/particles.js"></script>
-
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["Le plan intéractif de vos locaux"];
+    var sentences = ["Le plan intéractif de votre entreprise, pour vos clients "];
 </script>
-<script src="assets/js/custom/portfolio-item.js"></script>
+<script src="assets/js/custom/service-item.js"></script>
 </body>
 </html>
