supression du lien dans les service et ajout de css

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -335,7 +335,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="left">
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <p><span>Web Design</span></p>
+                            <h4>Web Design</h4>
                             <p>Une visibilité et une utilisation agréable et simple.</p>
                         </div>
                         <div class="icons">
@@ -344,7 +344,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div><br></br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <a href="service-item.html">Responsive Design</a>
+                            <h4>Responsive Design</h4>
                             <p>Compatible et s'adapte à tout type de support.</p>
                         </div>
                         <div class="icons">
@@ -353,7 +353,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div><br></br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
-                            <a href="service-item.html">Reférencement Optimisé</a>
+                            <h4>Reférencement Optimisé</h4>
                             <p>Référencement organique ou sponsorisé pout une notoriété améliorée.</p>
                         </div>
                         <div class="icons">
@@ -370,7 +370,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <i class="material-icons">mood</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Expérience Utilisateur</a>
+                            <h4>Expérience Utilisateur</h4>
                             <p>Des fonctionnalités concues pour vos clients et votre entreprise.
                                (Billeterie, Cartographie, File d'attente numérique)</p>
                         </div><br></br>
@@ -380,7 +380,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <i class="material-icons">trending_up</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Business</a>
+                            <h4>Business</h4>
                             <p>Des outils de statistiques et de prévisions de
                               votre chiffres d'affaire, relences clients</p>
                         </div>
@@ -390,7 +390,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <i class="material-icons">autorenew</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Autonome</a>
+                            <h4>Autonome</h4>
                             <p>News letters automatisées, envoie ciblé</p>
                         </div>
                     </div>
