ajout button contactez-nous plus page-scroll

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -418,7 +418,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <h3 class="wow fadeIn animated">Envie de faire évoluer votre entreprise ?<span> Contactez-nous</span> dès maintenant !</h3>
                 <p class="wow fadeIn animated">Notre équipe répondra à vos questions et vous proposera
                   la solution la plus adaptée pour votre entreprise.</p>
-                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Contactez-nous !</button>
+                <a class= "page-scroll" href="#contact">
+                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous !</button>
+                </a>
             </div>
             <!-- /.col-md-12 -->
         </div>
