--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -124,7 +124,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 Nous mettons en œuvre <span>des solutions simples et efficaces</span> à travers des plateformes
                 multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
                 </h4>
+                <a class= "page-scroll" href="#contact">
                 <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Dites nous vos besoin</button>
+                </a>
             </div>
             <!-- /.col-md-12 -->
         </div>
@@ -226,7 +228,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated"><span>Pouquoi </span> Vous ?</h2>
+                    <h2 class="wow fadeIn animated">Pouquoi <span> Vous ?</span></h2><br></br>
                     <h3 class="wow fadeIn animated">
                         <span>Fidéliser un client ou un visiteur et en apporter de nouveaux !</span>
                     </h3>
